--- a/main.html
+++ b/main.html
@@ -28,9 +28,11 @@
     </section>
 
     <article>
-        <h2>About Me</h2>
-        <img src="images/Jupiter.jpg" alt="Jupiter" title="Jupiter">
-        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt minus aliquam voluptates magnam nesciunt enim, blanditiis repudiandae placeat, officiis, porro cupiditate totam eaque. Sed voluptatibus voluptas dignissimos iusto suscipit? Earum iste, quo incidunt libero aliquam deleniti. Ducimus, consectetur dolorum! Pariatur dolor earum libero, esse eaque aspernatur odit tenetur cumque magnam praesentium consectetur nesciunt vel, accusantium eos accusamus quo provident possimus autem ullam porro maxime? Vero impedit aliquid facilis, nesciunt natus tenetur libero ullam a exercitationem saepe quisquam minima in dolores. Quia, ipsa. Quia reprehenderit deleniti cumque totam optio modi dignissimos, sunt autem architecto libero soluta praesentium sequi corrupti amet accusamus!</h3>
+        <h2>I am, somehow, less interested in the weight and convolutions of Einstein's brain than in the near cerntainty that people of equal talent have lived and dies in cotton fields and sweatshops.</h2>
+        <img src="images/chart1.jpeg" alt="chart1" title="chart1">
+        <h3>From 1981 to 1989 Ronald Reagans administration stresses conservatinve economic values, which included the Largest tax cut in american history as well as increased defense spending as of his soviet strategy.
+            The tax reforms instituted during his predisency brought top marginal tax rates to their lowest levels since 1931.
+        </h3>
     </article>
 
     <footer>
