--- a/main.html
+++ b/main.html
@@ -30,10 +30,10 @@
     <article>
         <h2>I am, somehow, less interested in the weight and convolutions of Einstein's brain than in the near cerntainty that people of equal talent have lived and dies in cotton fields and sweatshops.</h2>
         <img src="images/chart1.jpeg" alt="chart1" title="chart1">
-        <h3>From 1981 to 1989 Ronald Reagans administration stresses conservatinve economic values, which included the Largest tax cut in american history as well as increased defense spending as of his soviet strategy.
+        <h3>From 1981 to 1989 Ronald Reagans administration stressed conservatinve economic values, which included the Largest tax cut in american history as well as increased defense spending as of his soviet strategy.
             The tax reforms instituted during his predisency brought top marginal tax rates to their lowest levels since 1931.
-            Knowing this, refer to the image above. This is a graphed representation of wealth inequality in the United states since 1913, the data used is from Capitalized income Tax data.(add a hyper link to what capitalized income tax data is)
         </h3>
+        <h4>Knowing this, refer to the image above. This is a graphed representation of wealth inequality in the United states since 1913, the data used is from Capitalized income Tax data.(add a hyper link to what capitalized income tax data is) </h4>
     </article>
 
     <footer>
