--- a/main.html
+++ b/main.html
@@ -34,7 +34,10 @@
             The tax reforms instituted during his predisency brought top marginal tax rates to their lowest levels since 1931.
         </h3>
         <br>
-        <h4>Knowing this, refer to the image above. This is a graphed representation of wealth inequality in the United states since 1913, the data used is from Capitalized income Tax data.(add a hyper link to what capitalized income tax data is) </h4>
+        <h4>Knowing this, refer to the image above. This is a graphed representation of wealth inequality in the United states since 1913, the data used is from Capitalized income Tax data.(add a hyper link to what capitalized income tax data is) 
+            As you can see, even after the 1980s Reagans policies had a lasting effect, increasing inequality across the country by about 10%(being generous)
+            This is a blatabt example of why "Trickle Down" economics is a bullshit talking point used to make it seem like you're operating with regular peoples best interest in mind.
+        </h4>
     </article>
 
     <footer>
