--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>etherealpastiche.github.io</title>
+    <title>etherealpastiche | Main</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
     </section>
 
     <article>
-        <h2>I am, somehow, less interested in the weight and convolutions of Einstein's brain than in the near cerntainty that people of equal talent have lived and dies in cotton fields and sweatshops.</h2>
+        <h2>I am, somehow, less interested in the weight and convolutions of Einstein's brain than in the near cerntainty that people of equal talent have lived and died in cotton fields and sweatshops.</h2>
         <img src="images/chart1.jpeg" alt="chart1" title="chart1">
         <h3>From 1981 to 1989 Ronald Reagans administration stressed conservatinve economic values, which included the Largest tax cut in american history as well as increased defense spending as of his soviet strategy.
             The tax reforms instituted during his predisency brought top marginal tax rates to their lowest levels since 1931.
