--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EtherealPastiche | main</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="/styles/index2.css">
 </head>
 <body>
     <section class="top-nav">
@@ -28,7 +28,8 @@
     </section>
 
     <article>
-        <h2>I am, somehow, less interested in the weight and convolutions of Einstein's brain than in the near cerntainty that people of equal talent have lived and died in cotton fields and sweatshops.</h2>
+        <h2>html page name</h2>
+        <h5>I am, somehow, less interested in the weight and convolutions of Einstein's brain than in the near cerntainty that people of equal talent have lived and died in cotton fields and sweatshops.</h5>
         <img src="images/chart1.jpeg" alt="chart1" title="chart1">
         <h3>From 1981 to 1989 Ronald Reagans administration stressed conservatinve economic values, which included the Largest tax cut in american history as well as increased defense spending as of his soviet strategy.
             The tax reforms instituted during his predisency brought top marginal tax rates to their lowest levels since 1931.
